[LOGMGR-217] Restructure part 1: move code to submodule and introduce parent